Renamed project for the new goal

--- a/BasicMathGame/BasicMathGame/BasicMathGame.csproj
+++ b/BasicMathGame/BasicMathGame/BasicMathGame.csproj
@@ -10,8 +10,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MenuSystem</RootNamespace>
-    <AssemblyName>MenuSystem</AssemblyName>
+    <RootNamespace>BasicMathGame</RootNamespace>
+    <AssemblyName>BasicMathGame</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
@@ -136,7 +136,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DifficultySelection.cs" />
+    <Compile Include="MathSelectionMenu.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -150,7 +150,7 @@
     <AndroidResource Include="Resources\layout\MainMenu.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
-    <AndroidResource Include="Resources\layout\DifficultySelection.axml">
+    <AndroidResource Include="Resources\layout\MathSelectionMenu.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
