Learned Xamarin's design for implementing space does not compile nice as it is missing layout_width. Created MathGame.cs with the basic logic in place. Added part of the addition game and found a way to auto focus and display the keyboard when the activity is launched.

--- a/BasicMathGame/BasicMathGame/BasicMathGame.csproj
+++ b/BasicMathGame/BasicMathGame/BasicMathGame.csproj
@@ -136,6 +136,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdditionActivity.cs" />
+    <Compile Include="MathGame.cs" />
     <Compile Include="MathSelectionMenu.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -151,6 +153,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\MathSelectionMenu.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\AdditionGame.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
