--- a/TicTacToe/TicTacToe/TicTacToe.csproj
+++ b/TicTacToe/TicTacToe/TicTacToe.csproj
@@ -57,7 +57,10 @@
     <Reference Include="Mono.Android" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Board.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GameManager.cs" />
+    <Compile Include="PlayerManager.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
